// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ShortListDropDown modal is visible when merge is required 1`] = `
Array [
  <div
    className="undefined short-list"
    onClick={[Function]}
>
    <span
        className="short-badge"
    >
        (2)
    </span>
</div>,
  ",",
  <div
    className="short-list--content text-left slide-out"
>
    <img
        alt="luk"
        className="short-list--close-btn"
        onClick={[Function]}
        src="Kryds.svg"
    />
    <div
        className="short-list--header"
    >
        HUSKELISTE
    </div>
    <div
        className="short-list--empty-text text-center"
    />
    <div
        className="short-list--elements"
    >
        <span>
            <div
                className="short-list-element"
            >
                <div
                    className="short-list-element--cover-image"
                >
                    <a
                        className="list-card-nohover"
                        href="/værk/pid1"
                        onClick={[Function]}
                    >
                        <BookCover
                            book={
                                Object {
                                    "pid": "pid1",
                                    "taxonomy_description": "some description1",
                                    "title": "some title1",
                                  }
                            }
                        />
                    </a>
                </div>
                <div
                    className="short-list-element--text"
                >
                    <div
                        className="short-list-element--header"
                    >
                        <a
                            className="list-card-nohover"
                            href="/værk/pid1"
                            onClick={[Function]}
                        >
                            some title1
                        </a>
                    </div>
                    <div
                        className="short-list-element--taxonomy-description"
                    >
                        some description1
                    </div>
                    <div
                        className="short-list-element--origin"
                    >
                        Minder om noget1
                    </div>
                </div>
                <img
                    alt="luk"
                    className="short-list-element--close-btn"
                    onClick={[Function]}
                    src="Kryds.svg"
                />
            </div>
            <div
                className="short-list-element"
            >
                <div
                    className="short-list-element--cover-image"
                >
                    <a
                        className="list-card-nohover"
                        href="/værk/pid2"
                        onClick={[Function]}
                    >
                        <BookCover
                            book={
                                Object {
                                    "pid": "pid2",
                                    "taxonomy_description": "some description2",
                                    "title": "some title2",
                                  }
                            }
                        />
                    </a>
                </div>
                <div
                    className="short-list-element--text"
                >
                    <div
                        className="short-list-element--header"
                    >
                        <a
                            className="list-card-nohover"
                            href="/værk/pid2"
                            onClick={[Function]}
                        >
                            some title2
                        </a>
                    </div>
                    <div
                        className="short-list-element--taxonomy-description"
                    >
                        some description2
                    </div>
                    <div
                        className="short-list-element--origin"
                    >
                        Minder om noget2
                    </div>
                </div>
                <img
                    alt="luk"
                    className="short-list-element--close-btn"
                    onClick={[Function]}
                    src="Kryds.svg"
                />
            </div>
        </span>
    </div>
    <div
        className="short-list--more-btn text-center"
    >
        <span
            className="btn btn-default text-center"
            onClick={[Function]}
        >
            SE HELE LISTEN
        </span>
    </div>
</div>,
]
`;

exports[`ShortListDropDown short list contains more than 3 elements, elements are added to top of list 1`] = `
Array [
  <div
    className="undefined short-list"
    onClick={[Function]}
>
    <span
        className="short-badge"
    >
        (4)
    </span>
</div>,
  ",",
  <div
    className="short-list--content text-left slide-out"
>
    <img
        alt="luk"
        className="short-list--close-btn"
        onClick={[Function]}
        src="Kryds.svg"
    />
    <div
        className="short-list--header"
    >
        HUSKELISTE
    </div>
    <div
        className="short-list--empty-text text-center"
    />
    <div
        className="short-list--elements"
    >
        <span>
            <div
                className="short-list-element"
            >
                <div
                    className="short-list-element--cover-image"
                >
                    <a
                        className="list-card-nohover"
                        href="/værk/pid4"
                        onClick={[Function]}
                    >
                        <BookCover
                            book={
                                Object {
                                    "pid": "pid4",
                                    "taxonomy_description": "some description4",
                                    "title": "some title4",
                                  }
                            }
                        />
                    </a>
                </div>
                <div
                    className="short-list-element--text"
                >
                    <div
                        className="short-list-element--header"
                    >
                        <a
                            className="list-card-nohover"
                            href="/værk/pid4"
                            onClick={[Function]}
                        >
                            some title4
                        </a>
                    </div>
                    <div
                        className="short-list-element--taxonomy-description"
                    >
                        some description4
                    </div>
                    <div
                        className="short-list-element--origin"
                    >
                        Minder om noget4
                    </div>
                </div>
                <img
                    alt="luk"
                    className="short-list-element--close-btn"
                    onClick={[Function]}
                    src="Kryds.svg"
                />
            </div>
            <div
                className="short-list-element"
            >
                <div
                    className="short-list-element--cover-image"
                >
                    <a
                        className="list-card-nohover"
                        href="/værk/pid3"
                        onClick={[Function]}
                    >
                        <BookCover
                            book={
                                Object {
                                    "pid": "pid3",
                                    "taxonomy_description": "some description3",
                                    "title": "some title3",
                                  }
                            }
                        />
                    </a>
                </div>
                <div
                    className="short-list-element--text"
                >
                    <div
                        className="short-list-element--header"
                    >
                        <a
                            className="list-card-nohover"
                            href="/værk/pid3"
                            onClick={[Function]}
                        >
                            some title3
                        </a>
                    </div>
                    <div
                        className="short-list-element--taxonomy-description"
                    >
                        some description3
                    </div>
                    <div
                        className="short-list-element--origin"
                    >
                        Minder om noget3
                    </div>
                </div>
                <img
                    alt="luk"
                    className="short-list-element--close-btn"
                    onClick={[Function]}
                    src="Kryds.svg"
                />
            </div>
            <div
                className="short-list-element"
            >
                <div
                    className="short-list-element--cover-image"
                >
                    <a
                        className="list-card-nohover"
                        href="/værk/pid2"
                        onClick={[Function]}
                    >
                        <BookCover
                            book={
                                Object {
                                    "pid": "pid2",
                                    "taxonomy_description": "some description2",
                                    "title": "some title2",
                                  }
                            }
                        />
                    </a>
                </div>
                <div
                    className="short-list-element--text"
                >
                    <div
                        className="short-list-element--header"
                    >
                        <a
                            className="list-card-nohover"
                            href="/værk/pid2"
                            onClick={[Function]}
                        >
                            some title2
                        </a>
                    </div>
                    <div
                        className="short-list-element--taxonomy-description"
                    >
                        some description2
                    </div>
                    <div
                        className="short-list-element--origin"
                    >
                        Minder om noget2
                    </div>
                </div>
                <img
                    alt="luk"
                    className="short-list-element--close-btn"
                    onClick={[Function]}
                    src="Kryds.svg"
                />
            </div>
        </span>
    </div>
    <div
        className="short-list--more-elements"
    >
        <div
            className="line-behind-text text-center"
        >
            <span
                className="line-behind-text--label"
                style={
                    Object {
                        "backgroundColor": "white",
                      }
                }
            >
                1 bog mere på listen
            </span>
            <div
                className="line-behind-text--line"
            />
        </div>
    </div>
    <div
        className="short-list--more-btn text-center"
    >
        <span
            className="btn btn-default text-center"
            onClick={[Function]}
        >
            SE HELE LISTEN
        </span>
    </div>
</div>,
]
`;

exports[`ShortListDropDown short list contains single element 1`] = `
Array [
  <div
    className="undefined short-list"
    onClick={[Function]}
>
    <span
        className="short-badge"
    >
        (1)
    </span>
</div>,
  ",",
  <div
    className="short-list--content text-left slide-out"
>
    <img
        alt="luk"
        className="short-list--close-btn"
        onClick={[Function]}
        src="Kryds.svg"
    />
    <div
        className="short-list--header"
    >
        HUSKELISTE
    </div>
    <div
        className="short-list--empty-text text-center"
    />
    <div
        className="short-list--elements"
    >
        <span>
            <div
                className="short-list-element"
            >
                <div
                    className="short-list-element--cover-image"
                >
                    <a
                        className="list-card-nohover"
                        href="/værk/pid1"
                        onClick={[Function]}
                    >
                        <BookCover
                            book={
                                Object {
                                    "pid": "pid1",
                                    "taxonomy_description": "some description1",
                                    "title": "some title1",
                                  }
                            }
                        />
                    </a>
                </div>
                <div
                    className="short-list-element--text"
                >
                    <div
                        className="short-list-element--header"
                    >
                        <a
                            className="list-card-nohover"
                            href="/værk/pid1"
                            onClick={[Function]}
                        >
                            some title1
                        </a>
                    </div>
                    <div
                        className="short-list-element--taxonomy-description"
                    >
                        some description1
                    </div>
                    <div
                        className="short-list-element--origin"
                    >
                        Minder om noget1
                    </div>
                </div>
                <img
                    alt="luk"
                    className="short-list-element--close-btn"
                    onClick={[Function]}
                    src="Kryds.svg"
                />
            </div>
        </span>
    </div>
    <div
        className="short-list--more-btn text-center"
    >
        <span
            className="btn btn-default text-center"
            onClick={[Function]}
        >
            SE HELE LISTEN
        </span>
    </div>
</div>,
]
`;

exports[`ShortListDropDown short list is empty and merge modal is hidden 1`] = `
Array [
  <div
    className="undefined short-list"
    onClick={[Function]}
>
    <span
        className="short-badge"
    >
        (0)
    </span>
</div>,
  ",",
  <div
    className="short-list--content text-left slide-out"
>
    <img
        alt="luk"
        className="short-list--close-btn"
        onClick={[Function]}
        src="Kryds.svg"
    />
    <div
        className="short-list--header"
    >
        HUSKELISTE
    </div>
    <div
        className="short-list--empty-text text-center"
    >
        Din huskeliste er tom
    </div>
    <div
        className="short-list--more-btn text-center"
    >
        <span
            className="btn btn-default text-center"
            onClick={[Function]}
        >
            SE HELE LISTEN
        </span>
    </div>
</div>,
]
`;
